nginx-0.1.0/objs/autoconf.err


----------------------------------------
checking for C compiler


----------------------------------------
checking for gcc -pipe switch


----------------------------------------
checking for gcc builtin atomic operations


----------------------------------------
checking for C99 variadic macros


----------------------------------------
checking for gcc variadic macros


----------------------------------------
checking for unistd.h


----------------------------------------
checking for inttypes.h


----------------------------------------
checking for limits.h


----------------------------------------
checking for sys/filio.h

objs/autotest.c:3:10: fatal error: sys/filio.h: No such file or directory
 #include <sys/filio.h>
          ^~~~~~~~~~~~~
compilation terminated.
----------


#include <sys/filio.h>

int main() {
    return 0;
}

----------
gcc -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for sys/param.h


----------------------------------------
checking for sys/mount.h


----------------------------------------
checking for sys/statvfs.h


----------------------------------------
checking for crypt.h


----------------------------------------
checking for epoll


----------------------------------------
checking for sendfile()


----------------------------------------
checking for sendfile64()


----------------------------------------
checking for sys/prctl.h


----------------------------------------
checking for prctl(PR_SET_DUMPABLE)


----------------------------------------
checking for sched_setaffinity()


----------------------------------------
checking for crypt_r()

objs/autotest.c: In function ‘main’:
objs/autotest.c:8:19: warning: null argument where non-null required (argument 1) [-Wnonnull]
                   crypt_r(NULL, NULL, &cd);;
                   ^~~~~~~
objs/autotest.c:8:19: warning: null argument where non-null required (argument 2) [-Wnonnull]

----------------------------------------
checking for sys/vfs.h


----------------------------------------
checking for poll()


----------------------------------------
checking for /dev/poll

objs/autotest.c:4:10: fatal error: sys/devpoll.h: No such file or directory
 #include <sys/devpoll.h>
          ^~~~~~~~~~~~~~~
compilation terminated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/devpoll.h>

int main() {
    int  n, dp; struct dvpoll  dvp;
                  dp = 0;
                  dvp.dp_fds = NULL;
                  dvp.dp_nfds = 0;
                  dvp.dp_timeout = 0;
                  n = ioctl(dp, DP_POLL, &dvp);
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for kqueue

objs/autotest.c:4:10: fatal error: sys/event.h: No such file or directory
 #include <sys/event.h>
          ^~~~~~~~~~~~~
compilation terminated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/event.h>

int main() {
    int kq; kq = kqueue();
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for crypt()

/tmp/ccO0UMTc.o: In function `main':
autotest.c:(.text+0x13): undefined reference to `crypt'
collect2: error: ld returned 1 exit status
----------

#include <sys/types.h>
#include <unistd.h>


int main() {
    crypt("test", "salt");;
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for crypt() in libcrypt


----------------------------------------
checking for F_READAHEAD

objs/autotest.c: In function ‘main’:
objs/autotest.c:7:14: error: ‘F_READAHEAD’ undeclared (first use in this function); did you mean ‘F_SEAL_SEAL’?
     fcntl(0, F_READAHEAD, 1);;
              ^~~~~~~~~~~
              F_SEAL_SEAL
objs/autotest.c:7:14: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <fcntl.h>

int main() {
    fcntl(0, F_READAHEAD, 1);;
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for posix_fadvise()


----------------------------------------
checking for O_DIRECT


----------------------------------------
checking for F_NOCACHE

objs/autotest.c: In function ‘main’:
objs/autotest.c:7:14: error: ‘F_NOCACHE’ undeclared (first use in this function)
     fcntl(0, F_NOCACHE, 1);;
              ^~~~~~~~~
objs/autotest.c:7:14: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <fcntl.h>

int main() {
    fcntl(0, F_NOCACHE, 1);;
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for directio()

objs/autotest.c: In function ‘main’:
objs/autotest.c:8:5: warning: implicit declaration of function ‘directio’ [-Wimplicit-function-declaration]
     directio(0, DIRECTIO_ON);;
     ^~~~~~~~
objs/autotest.c:8:17: error: ‘DIRECTIO_ON’ undeclared (first use in this function)
     directio(0, DIRECTIO_ON);;
                 ^~~~~~~~~~~
objs/autotest.c:8:17: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/types.h>
                  #include <sys/fcntl.h>

int main() {
    directio(0, DIRECTIO_ON);;
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for statfs()

objs/autotest.c: In function ‘main’:
objs/autotest.c:10:19: warning: null argument where non-null required (argument 1) [-Wnonnull]
                   statfs(NULL, &fs);;
                   ^~~~~~

----------------------------------------
checking for statvfs()

objs/autotest.c: In function ‘main’:
objs/autotest.c:9:19: warning: null argument where non-null required (argument 1) [-Wnonnull]
                   statvfs(NULL, &fs);;
                   ^~~~~~~

----------------------------------------
checking for dlopen()

/tmp/ccFVTnqu.o: In function `main':
autotest.c:(.text+0xf): undefined reference to `dlopen'
collect2: error: ld returned 1 exit status
----------

#include <sys/types.h>
#include <unistd.h>
#include <dlfcn.h>

int main() {
    dlopen(NULL, 0);
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for dlopen() in libdl


----------------------------------------
checking for sched_yield()


----------------------------------------
checking for SO_SETFIB

objs/autotest.c: In function ‘main’:
objs/autotest.c:7:31: error: ‘SO_SETFIB’ undeclared (first use in this function); did you mean ‘FD_SETSIZE’?
     setsockopt(0, SOL_SOCKET, SO_SETFIB, NULL, 4);
                               ^~~~~~~~~
                               FD_SETSIZE
objs/autotest.c:7:31: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>

int main() {
    setsockopt(0, SOL_SOCKET, SO_SETFIB, NULL, 4);
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for accept4()


----------------------------------------
checking for PCRE library


----------------------------------------
checking for OpenSSL library

objs/autotest.c:4:10: fatal error: openssl/ssl.h: No such file or directory
 #include <openssl/ssl.h>
          ^~~~~~~~~~~~~~~
compilation terminated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <openssl/ssl.h>

int main() {
    SSL_library_init();
    return 0;
}

----------
gcc -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lssl -lcrypto
----------
